# stompymux

./: .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  INSTALL  LICENSE.md  README.md  TODO  global-removal-review-feedback.md  justfile
.devcontainer/: Dockerfile
.github/workflows/: ci.yml  hugo-pages.yml
btech/: INSTALL
btech/btfi/: Codec.hh  Element.cc  MutableAttributes.cc  MutableAttributes.hh  Name.cc  Serializable.hh  Value.cc  Value.hh  VocabSimple.hh  VocabTable.hh  common.h  encalg.c  encalg.h  errors.c  sax.cc  stream.h
btech/btfi/include/: attribs.h  errors.h  fiptypes.h  sax.h  values.h
btech/btfi/tests/: dummy.cc  saxread.c  saxwrite.c  vocabtest.cc
btech/btpr/: conf.c  event.c  netcommon.c
btech/btpr/include/: interface.h
btech/contrib/db/: flatfiledb.py
btech/src/: btdb.c  btdb.h  btdb_int.h  coolmenu.c  glue.c  glue.hcode.c  glue.scode.c  mechfile.c  mt19937ar.c  tick.c
btech/src/btech/: aero.bomb.h  artillery.c  artillery.h  autopilot.h  autopilot_ai.c  autopilot_commands.c  autopilot_core.c  autopilot_radio.c  btechstats.c  btechstats.h  btechstats_global.h  btmacros.h  btspath.c  ds.bay.c  eject.c  extern.h  failures.c  failures.h  floatsim.h  hudinfo.c  map.bits.c  map.c  map.coding.h  map.h  map.los.c  map.los.h  map.obj.c  map.weather.c  mech.ammodump.c  mech.build.c  mech.c3.c  mech.c3.misc.c  mech.combat.c  mech.combat.h  mech.combat.missile.c  mech.consistency.c  mech.contacts.c  mech.damage.c  mech.ecm.h  mech.enhanced.criticals.c  (+122 more)
btech/src/include/: btconfig.h  coolmenu.h  coolmenu_interface.h  coolmenu_interface2.h  debug.h  glue.h  glue_types.h  macros.h  mt19937ar.h  mycool.h  p.coolmenu.h  p.events.h  p.glue.h  p.glue.scode.h  p.mech.lostracer.h  p.mechfile.h  spath.h
cmake/: autoconf.h.in  version.h.in
doc/: CREDITS.TinyMUX  btech-sqlite-persistence.md  exilemerge.txt
docs/: COPYRIGHT.md  README.md  go.mod  hugo.toml  package-lock.json  package.json  source-architecture.md
docs/content/en/: _index.md
docs/layouts/: index.html
docs/plans/: btech-to-sqlite.md  restarts-to-sqlite.md
event/: event.c  event_test.c  muxevent.h  p.event.h  p.event_test.h
game/: Startmux  alias.conf  aliases.toml  stompymux.toml
game.run/: Startmux  alias.conf  mux.config  netmux.conf
game.run/lua/global_commands/: README.md  example.lua
game.run/lua/global_logic/: README.md
game.run/lua/object_logic/: counter.lua  example.lua  hello.lua
game.run/text/: guest.txt  help.txt  makehelp  register.txt  wizhelp.txt
game.run/text/wizhelp/: wizhelp
game/help/: about.md  index.md  who.md  wizards.md
game/help/flags/: ansi.md  ansimap.md  audible.md  auditorium.md  blind.md  connected.md  dark.md  floating.md  gagged.md  going.md  halted.md  in_character.md  index.md  light.md  monitor.md  no_command.md  quiet.md  safe.md  suspect.md  transparent.md  wizard.md  xcode.md  zombie.md
game/help/subdir/: another_article.md  subdir.md
game/help/wizard_commands/: chan.md  examine.md  help.md  index.md  last.md  lua.md  session.md  stats.md
game/lua/global_logic/: example.lua  flow_examples.lua  who.lua
game/lua/object_logic/: counter.lua  example.lua
game/text/: connect.txt  help.txt  quit.txt  wizhelp.txt
include/: create.h  muxevent.h  myfifo.h  p.event.h
misc/: myfifo.c  myfifo.h
old_docs/: lua.md  server-restart.md
plans/: README.md  btech-sqlite-persistence.md
src/: Makefile.am  alloc.h  ansi.h  attrs.h  boolexp.c  bsd.c  bsd.h  commac.c  commac.h  command.c  command.h  compat.c  comsys.c  comsys.h  conf.c  conf.h  config.h  copyright.h  cque.c  cque.h  create.c  db.c  db.h  db_rw.c  db_xdr.c  db_xml.c  debug.h  dllist.h  dnschild.c  dnschild.h  eval.c  externs.h  file_c.c  file_c.h  flags.c  flags.h  funceval.c  functions.c  functions.h  game.c  (+56 more)
src/btech/: .clang-tidy  btech_context.h  map_coding_registry.h  missile_hit_registry.h  random.h  weapon_settings.h
src/btech/btfi/: Attributes.hh  Codec.cc  Document.cc  Document.hh  Element.hh  Exception.hh  Name.hh  ObjectPool.hh  Value.cc  Value.hh  VocabSimple.cc  VocabTable.hh  Vocabulary.cc  Vocabulary.hh  encalg.h  stream.c
src/btech/persistence/: btech_persistence.h  btech_persistence_sqlite.c
src/btech/src/: btdb.c  btdb_int.h  btech_context.c  coolmenu.c  debug.c  events.c  glue.c  glue.hcode.c  glue.scode.c  mech.lostracer.c  mechfile.c  mt19937ar.c  tick.c  xcode_io.c  xcode_io.h
src/cmake/: autoconf.h.in  btmux_build_config.h.in  version.h.in
src/event/: event.c  muxevent.h
src/include/: create.h  muxevent.h  p.event.h
src/misc/: myfifo.c
src/mkindx/: mkindx.c
src/mkinx/: mkindx.c
src/mux/: ansi.h  attrs.h  boolexp.c  bsd.c  bsd.h  commac.c  commac.h  command.c  command.h  comsys.c  comsys.h  conf.c  conf.h  config.h  cque.c  cque.h  create.c  db.c  db.h  db_rw.c  db_xdr.c  debug.h  descriptor.h  dllist.c  dllist.h  dnschild.c  dnschild.h  eval.c  externs.h  file_c.c  file_c.h  flags.c  flags.h  funceval.c  functions.c  functions.h  game.c  help.c  help.h  interface.h  (+47 more)
src/mux/commands/: builder_commands.c  command.c  command.h  command_context.c  command_context.h  command_helpers.c  command_helpers.h  command_invocation.c  command_invocation.h  command_parser.c  command_parser.h  command_queue.c  command_queue.h  command_runtime.h  custom_commands.c  eval.c  eval.h  funceval.c  functions.c  functions.h  help.c  help.h  look.c  look.h  macro.c  macro.h  program.c  rob.c  verbs.c  verbs.h  wiz.c
src/mux/communication/: channel_registry.c  channel_registry.h  commac.c  commac.h  comsys.c  comsys.h  comsys_context.c  comsys_context.h  speech.c  speech.h
src/mux/database/: attrs.h  boolexp.c  boolexp.h  db.c  db.h  flags.c  flags.h  powers.c  powers.h  vattr.c  vattr.h
src/mux/gamedb/: gamedb.h  gamedb_sqlite.c
tests/: configuration_toml_parse.c  event_timer.c  flag_privileges.c  gamedb_integration.c  help_frontmatter_parse.c  help_index_integration.c  help_render.c  libtelnet_integration.c  libuv_tcp_integration.c  lua_module_smoke.c  mux_header_interfaces.c  password_hash.c  power_fields.c  validation.c
(+463 files in other folders)
